Fix dialog not being visible when button is well below top of screen; Make header sticky; Fix bug where touchable quadrants weren't lining up with underlying shape;

--- a/app/view/_shared/miscellaneous/components/dialog.module.css
+++ b/app/view/_shared/miscellaneous/components/dialog.module.css
@@ -2,6 +2,7 @@
   border-radius: var(--radius-xl);
   border-width: 0;
   margin: auto;
+  position: fixed;
   box-shadow: var(--shadow-deep);
 }
 .standard-dialog-component::backdrop {
